--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 OTA Insight Ltd.
-Glen Henri J. De Cauwsemaecker
-Yarne Decuyper
+Glen Henri J. De Cauwsemaecker (@glendc)
+Yarne Decuyper (@yarn-e)
